fix: use G1GC with 6G heap for spark tests (ZGC SIGSEGV on JVM 21)